--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "practice_loops",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://practiceloops.github.io/practice_loops",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -38,7 +39,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.1.1",
-    "homepage": "https://practiceloops.github.io/practice_loops"
+    "gh-pages": "^6.1.1"
   }
 }
