--- a/package.json
+++ b/package.json
@@ -39,6 +39,10 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.1.1"
+    "@types/node": "^20.10.6",
+    "@types/react": "^18.2.46",
+    "@types/react-dom": "^18.2.18",
+    "gh-pages": "^6.1.1",
+    "typescript": "^5.3.3"
   }
 }
