--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-webcam": "^7.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -43,6 +44,6 @@
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
     "gh-pages": "^6.1.1",
-    "typescript": "^5.3.3"
+    "typescript": "^4.0.0"
   }
 }
